@@ -1,3 +1,12 @@
+Wed Jun 29 16:38:42 2005  Ming Xiong <mxiong@dre.vanderbilt.edu>
+
+        * DAnCE/ComponentPackager/Base_Packager.h
+        * DAnCE/ComponentPackager/CPK_Packager.h
+        * DAnCE/ComponentPackager/CPK_Packager.h
+        
+        Changed a couplfe of places to meet the Doxygen test and TChar test for
+        bin/fuzz.pl
+
 Wed Jun 29 16:28:52 2005  William Otte  <wotte@dre.vanderbilt.edu>
 
 	* DAnCE/DomainApplicationManager/Deployment_Configuration.cpp
